<resources>
    <string name="app_name">Fizyka</string>

    <!--FileExplorerActivity-->
    <string name="file_no_app">No app installed to handle that file type</string>
    <string name="missing_files">Some files may be missing, you might need to redownload</string>
    <string name="file_missing">(missing file)</string>
    <string name="file_corrupted">(corrupted file)</string>
    <string name="folder_missing">(missing folder)</string>
    <string name="class_changed_update">File update is required</string>

    <string name="file_type_folder">Folders</string>
    <string name="file_type_file">Files</string>

    <string name="file_item">%d item</string>
    <string name="file_item_plural">%d items</string>
    <string name="file_byte">%1$,.2f byte</string>
    <string name="file_byte_plural">%1$,.2f bytes</string>
    <string name="file_kilobyte" translatable="false">%1$,.2f kB</string>
    <string name="file_megabyte" translatable="false">%1$,.2f MB</string>
    <string name="file_gigabyte" translatable="false">%1$,.2f GB</string>
    <string name="file_terabyte" translatable="false">%1$,.2f TB</string>
    <string name="file_petabyte" translatable="false">%1$,.2f PT</string>
    <string name="file_exabyte" translatable="false">%1$,.2f EB</string>

    <string name="sort_title">Sort by</string>
    <string name="sorting_mode_name">Name</string>
    <string name="sorting_mode_date">Upload date</string>
    <string name="sorting_mode_size">Size</string>


    <!--Settings activity-->
    <string name="activity_name_settings">Settings</string>
    <string name="toast_invalid_path">The path you entered is invaild</string>

    <string name="default_title">Reset</string>
    <string name="default_message">Do you want to reset the settings to default?</string>

    <string name="no_update_dialog_title">No new files</string>
    <string name="no_update_dialog_desc">There are no new files available, do you still want to download?</string>
    <string name="update_dialog_title">New files</string>
    <string name="update_dialog_desc">There is a new version available, do you want to download?</string>

    <!--Validation strings-->
    <string name="validation_url_button">Validate</string>
    <string name="validation_path_invalid_slash">The path must start and end with a slash</string>
    <string name="validation_path_invalid_chars">The path name is invalid</string>
    <string name="validation_url_invalid_regex">The Dropbox url is invalid</string>
    <string name="validation_url_not_found">The Dropbox url was not found</string>
    <string name="validation_url_no_access">No permission to access that folder</string>
    <string name="validation_url_unknown">Unknown error</string>
    <string name="validation_url_refresh">Checking your url…</string>
    <string name="validation_url_ok">Your url is OK</string>
    <string name="validation_url_empty">The url must not be empty</string>

    <!--Toast and Snackbar strings-->
    <string name="toast_no_network">There is no network connection</string>
    <string name="toast_no_updates">No updates found</string>
    <string name="toast_refresh_start">Update has started, this may take while</string>
    <string name="toast_error_forbidden">You don\'t have permission to access that Dropbox folder</string>
    <string name="toast_error_not_found">The Dropbox folder was not found</string>
    <string name="toast_error_unknown">An unknown error has occurred</string>
    <string name="toast_error_connection_timed_out">Connection timed out</string>
    <string name="snackbar_button_retry">Retry</string>

    <!--About activity-->
    <string name="about_version">Current version:</string>
    <string name="about_version_new">Checking for updates</string>
    <string name="about_version_new_found">New version found: </string>
    <string name="about_version_new_not_found">No updates found</string>
    <string name="about_developer">Developed by Krzysiek Zdulski</string>
    <string name="about_activity_name">About</string>

    <!--Permission strings-->
    <string name="permission_denied_WRITE_EXTERNAL_STOARGE">The app won\'t be able to download files</string>
    <string name="permission_denied_notification">To use notification please allow external storage access</string>
    <string name="permission_allowed_notification">Now you can enable notifications</string>

    <!--Notification strings-->
    <string name="notify_title">New files</string>
    <string name="notify_desc">There are new files available to download</string>
    <string name="notify_desc_initial">That\'s the first time download. Changelog isn\'t available</string>
    <string name="notify_changelog_in">in</string>
    <string name="notify_changelog_root">Dropbox</string>
    <string name="notify_changelog_more">and %d more</string>

    <string name="download_notify_button">Download</string>

    <string name="download_title">Fizyka</string>
    <string name="download_disc">Your file is now being downloaded…</string>
    <string name="download_completed_title">Download completed</string>
    <string name="download_completed_desc">Your download has finished, click to open the file</string>

    <string name="update_title">App update available</string>
    <string name="update_disc">Version %s is now available to update.\nDo you want to download and install a new version?</string>
    <string name="update_completed_title">Download finished</string>
    <string name="update_completed_disc">Expand notification to install version %s</string>
    <string name="update_completed_disc_expanded">Click to install version %s</string>
    <string name="update_in_progress_title">Downloading update</string>
    <string name="update_in_progress_disc">Downloading version %s</string>
    <string name="update_notify_button">Install</string>
    <string name="update_error_wrong_version_title">Error</string>
    <string name="update_error_wrong_version_disc_long">An error occurred when trying to update, please send this feedback to the developer</string>
    <string name="update_error_wrong_version_disc">An error occurred when trying to update</string>
    <string name="update_error_notify_button">Send</string>

    <!--Menu strings-->
    <string name="menu_reset">Reset to default</string>
    <string name="menu_about">About</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_download">Download</string>
    <string name="menu_settings">Settings</string>

    <!--Preference strings-->
    <string name="settings_notification_title">Notifications</string>
    <string name="settings_notification_summary">Enable or disable notifications</string>
    <string name="settings_refresh_title">Refresh delay</string>
    <string name="settings_refresh_summary">Time between refreshes</string>
    <string name="settings_path_title">Path</string>
    <string name="settings_path_summary">Path to save the downloaded file</string>
    <string name="settings_url_title">Dropbox link</string>
    <string name="settings_url_summary">URL to the shared Dropbox folder</string>
    <string name="settings_extract_title">Extract</string>
    <string name="settings_extract_summary">Extract files after download</string>
    <string name="settings_time_reference_title">Notification time</string>
    <string name="settings_time_reference_summary">Time according to which notification appear</string>


    <string name="category_notification">Notification</string>
    <string name="category_storage">Storage</string>
    <string name="category_network">Network</string>

    <string name="refresh_time1">30 minutes</string>
    <string name="refresh_time2">1 hour</string>
    <string name="refresh_time3">2 hours</string>
    <string name="refresh_time4">4 hours</string>
    <string name="refresh_time5">12 hours</string>
    <string name="refresh_time6">1 day</string>
    <string name="refresh_time7">2 days</string>
    <string name="refresh_time8">Week</string>

    <!--Settings arrays-->
    <string-array name="refresh_time_name">
        <!--<item>Debug - 1min</item>-->             <!--TODO Remove in final release-->
        <item>@string/refresh_time1</item>
        <item>@string/refresh_time2</item>
        <item>@string/refresh_time3</item>
        <item>@string/refresh_time4</item>
        <item>@string/refresh_time5</item>
        <item>@string/refresh_time6</item>
        <item>@string/refresh_time7</item>
        <item>@string/refresh_time8</item>
    </string-array>
    <string-array name="refresh_time_value" translatable="false">
        <!--<item>1</item> -->                        <!--TODO Remove in final release-->
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>240</item>
        <item>720</item>
        <item>1440</item>
        <item>2880</item>
        <item>10080</item>
    </string-array>

    <!--DO NOT EDIT-->
    <string name="api_token" translatable="false">CUvm2qbKkcAAAAAAAAAACV_P-oQVpznwysO21GMvVawKA4r6YxB1jjvr3eULVZpb</string>
    <string name="api_url" translatable="false">https://api.dropbox.com/1/metadata/link</string>
    <string name="update_url" translatable="false">https://raw.githubusercontent.com/RouNNdeL/fizyka/master/app/</string>
    <string name="file_name" translatable="false">.fizyka.zip</string>
    <string name="update_file_name" translatable="false">update.apk</string>
</resources>
