<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_notification">
        <SwitchPreference
            android:key="notification"
            android:title="@string/settings_notification_title"
            android:summary="@string/settings_notification_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_network">
        <ListPreference
            android:key="refresh_time"
            android:title="@string/settings_refresh_title"
            android:summary="@string/settings_refresh_summary"
            android:defaultValue="720"
            android:entries="@array/refresh_time_name"
            android:entryValues="@array/refresh_time_value"/>
        <EditTextPreference
            android:key="download_url"
            android:title="@string/settings_url_title"
            android:summary="@string/settings_url_summary"
            android:defaultValue="https://www.dropbox.com/sh/ya38ajmh9bezwhz/AABdJ69NcP-TDN4XlnNG83t_a?dl=0"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_storage">
        <com.roundel.fizyka.PathValidationEditTextPreference
            android:key="download_path"
            android:title="@string/settings_path_title"
            android:summary="@string/settings_path_summary"
            android:defaultValue="/fizyka/"
            android:dialogLayout="@layout/edittext_layout"/>
        <SwitchPreference
            android:key="extract"
            android:title="@string/settings_extract_title"
            android:summary="@string/settings_extract_summary"
            android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>