<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_reset"
        android:title="@string/menu_reset"
        android:icon="@drawable/ic_settings_backup_restore_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_clear_date"
        android:title="Clear date"
        app:showAsAction="never"
        android:visible="false"/>  
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never"/>
</menu>